--- a/style.css
+++ b/style.css
@@ -10,11 +10,12 @@
 }
 body{
     min-height: 100vh;
-    background: url("./img/bg.jpg") no-repeat;
+    background: url("./img/plane-bg.jpg") no-repeat;
     background-size: cover;
     background-position: center;
-    background-color: rgb(212, 199, 180);
+    
 }
+
 .header{
   position: fixed;
   left: 0;
@@ -33,7 +34,7 @@ body{
     justify-content: center;
     align-items: center;
     font-size: 22px;
-    color: white;
+    color: black;
     text-decoration: none;
     font-weight: 700;
 
@@ -41,9 +42,9 @@ body{
 }
 .logo img{
 
-   width: 38px;
-    color: white;
-    text-decoration: none;
+   width: 48px;
+    
+    
     
 
 }
@@ -54,7 +55,7 @@ body{
 .navbar a{
     position: relative;
     font-size: 18px;
-    color: white;
+    color: black;
    text-decoration: none;
    font-weight: 500;
    margin-left: 25px;
@@ -67,10 +68,76 @@ body{
     left: 0;
     width: 0;
     height: 2px;
-    background: #fff;
+    background: blueviolet;
     transition: .3s;
 
 }
 .navbar a:hover::before{
     width: 100%;
+}
+.content{
+    margin-left: 50px;
+    margin-top: 10%;
+    max-width: 800px;
+    position: relative;
+    
+   
+
+}
+.pink{
+    color: #c430d7;
+}
+
+.content h1{
+    font-size: 55px;
+    color: #222;
+    
+}
+.content p{
+    margin: 10px 0 30px;
+    color: #333;
+    animation-delay: 0.5s;
+}
+.btn{
+    display: inline-block;
+    text-decoration: none;
+    padding: 14px 60px;
+    color: #fff;
+    background-image: linear-gradient(45deg,#df4881, #c430d7);
+    font-size: 16px;
+    border-radius: 30px;
+    border-top-right-radius: 0;
+    
+
+}
+.btn.anim{
+    animation-delay: 1s;
+    
+}
+
+.btn:hover{
+    border-bottom-left-radius: 0;
+    border-top-right-radius: 30px;
+} 
+.contentCat-Img{
+width: 530px;
+position: absolute;
+bottom: 0;
+top: 0;
+left: 800px;
+
+}
+.contentCat-Img.anim{
+    animation-delay: 1.5s;
+}
+.anim{
+    opacity: 0;
+    transform: translateY(30px);
+    animation: moveup 0.5s linear forwards;
+}
+@keyframes moveup{
+    100%{
+        opacity: 1;
+        transform: translateY(0px);
+    }
 }
