adding js and img api not responsiv rn

--- a/style.css
+++ b/style.css
@@ -209,7 +209,8 @@ form {
   border-radius: 30px;
   border-top-right-radius: 0;
   text-align: center;
-  /* display: none; */
+  display: none; 
+  
 
  
 }
